@@ -1,8 +1,12 @@
 2007-11-04  Inge Wallin  <inge@lysator.liu.se>
 
 	APIDOX
-	* src/lib/geodata/data/GeoDataFeature.h: More apidox
+	* src/lib/geodata/data/GeoDataFeature.h,
+	* src/lib/geodata/data/GeoDataPlaceMark.h: More apidox
 	
+	APIDOX
+	* src/lib/geodata/data/GeoDataFeature.h: More apidox
+
 	Warnings--
 	* src/kdemain.cpp,
 	* src/lib/PlaceMarkContainer.cpp,
